--- a/assets/dev/sass/_number.scss
+++ b/assets/dev/sass/_number.scss
@@ -23,4 +23,6 @@
 
 .ha-number-text {
   flex: 1;
+  position: relative;
+  z-index: 1;
 }
